--- a/Sign-up.html
+++ b/Sign-up.html
@@ -15,25 +15,28 @@
 
 <body>
 
-    <div class="container-fluid vh-100 bg-clr">
+    <div class="container-fluid min-vh-100 bg-clr">
 
         <div class="pt-5 row justify-content-center">
 
-            <div class="box py-3 col-md-7 d-flex flex-column justify-content-center align-items-center">
+            <div class="box py-5 col-md-6 d-flex flex-column justify-content-center align-items-center">
 
                 <h1 class="text-clr fw-normal mb-3">Smart Login System</h1>
 
                 <form class="w-100 d-flex flex-column justify-content-center align-items-center mb-3" action="">
 
                     <input class="form-control mb-3 w-75" type="text" name="" id="" placeholder="Enter your name">
-                    <input class="form-control mb-3 w-75" type="text" name="" id="" placeholder="Enter your email">
-                    <input class="form-control w-75 mb-4" type="text" name="" id="" placeholder="Enter your password">
+                    <input class="form-control mb-3 w-75" type="email" name="" id="" placeholder="Enter your email">
+                    <input class="form-control w-75 mb-4" type="password" name="" id="" placeholder="Enter your password">
+                    
+                    <span class="userMessage text-decoration-none"></span>
 
                     <button class="btn btn-outline-info w-75"> Sign Up </button>
 
                 </form>
 
-                <p class="text-white">Don’t have an account?
+            
+                <p class="text-white">You have an account?
                     <a href="./index.html" class="text-decoration-none text-white"><span>Sign in</span></a>
                 </p>
 
@@ -43,6 +46,7 @@
 
     </div>
 
+    <script src="./Script/signUp.js"></script>
 </body>
 
 </html>
